chore(882): decision-review lane 0 hygiene sweep
Lane 0 of the 2026-09-01 architectural decision review: the mechanical,
safe-to-do-now fixes that every later lane branches from.

- Item 4: --enable-native-access=ALL-UNNAMED at both production JVM spawn
  sites (WorkerSpawner, Tauri lib.rs) and the chaos harness; the inert
  pre-Lucene-10 --add-opens java.nio line and the unused jdk.incubator.vector
  jlink module removed; WorkerSpawnerJvmFlagsTest pins the argv.
- Item 5: one shared GrpcMessageLimits.MAX_INBOUND_MESSAGE_BYTES read by the
  Worker server and the Head client (was 32 MiB vs grpc-java's 4 MiB default);
  Worker RPC deadline default 5000 -> 15000 ms per tempdoc 251.
- Item 22: dead yaml groups removed from both application.yaml copies; the
  WorkerAi record, its builder, its EnvRegistry constants and the smoke-driver
  stub deleted; search.rerank.* baseline pins retired; the CLAUDE.md "Windows
  env vars unreliable" pitfall row removed (tempdoc 347 diagnosed Gradle
  configuration caching).
- Item 24: a corrupt ui/settings.json is quarantined to a timestamped sibling,
  defaults load, and LifecycleReasonCode.SETTINGS_RESET_FROM_CORRUPT is raised
  once the condition substrate exists (ADR-0008 restored; register policy
  PRESERVE_AND_RECOVER_DEFAULTS; future schemaVersion still fails loud).
- Item 25: ADR frontmatter status aligned with the body on 0010, 0013, 0038,
  0039, 0041 and the README index.
- Item 26: sysprop data-dir aliases justsearch.data_dir / app.data_dir retired
  across resolver, launch sites, Worker forwarding, effective-config, chaos
  harness, contract spec, tests and docs; Head heap doc; EnvRegistry precedence
  javadoc; rrf javadoc; MMF RESERVED1 span fixed with a layout pin test.

Ride-alongs: stale store-recoverability expected-state pin retired (gate is
green); agent-postmortems #28 shared-worktree-checkout.

Verified: build -x test, full gradlew test (two alias-sweep regressions caught
and fixed), all node gates, cargo check, ui